# vscodeoffline

./: .dockerignore  .gitignore  CHANGELOG.md  LICENCE  Makefile  README.md  docker-compose.yml  pyproject.toml  sync.Dockerfile
_resources/: server.Dockerfile  serverasync.Dockerfile  sync.Dockerfile  tests.md
vscoffline/: __init__.py  server.py  server_async.py  sync.py  utils.py
vscoffline/vscgallery/: async_utils.py  gallery.py
vscoffline/vscgallery/content/: browse.html  index.html
vscoffline/vscsync/: __init__.py  classes.py  models.py
