[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "vscoffline"
version = "0.0.0"
description = "A VSCode Binary & Extension Mirroring & Rehosting tool"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "logzero",
    "requests",
    "pytimeparse",
    "orjson"
]

[project.optional-dependencies]
dev = [
    "black",
    "falcon",
    "gunicorn",
    "watchdog",
]
server = [
    "falcon",
    "gunicorn",
    "watchdog",
]
server_async = [
    "aiopath",
    "aiofiles",
    "falcon",
    "uvicorn[standard]"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vscoffline*"]  # package names should match these glob patterns (["*"] by default)
